Fix text error on Mobile
If you view the website on mobile and scroll to the projects menu it will say "select a project from the left", while in reality it is on the top. This has been fixed.

--- a/style.css
+++ b/style.css
@@ -496,7 +496,16 @@ footer {
 /* MOBILE OPTIMIZATIONS */
 /*   We "love" mobile   */
 /* -------------------- */
+.visibleOnMobile {
+    display: none;
+}
 @media (orientation: portrait) {
+    .visibleOnMobile {
+        display: unset;
+    }
+    .visibleOnDesktop {
+        display: none;
+    }
     .dyn-row.flex.row {
         flex-direction: column;
     }
